[package]
name = "candelabre-examples"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"
homepage = ""
repository = ""
documentation = ""
readme = "README.md"

[[bin]]
name = "simple_window"
path = "src/simple_window.rs"

#[[bin]]
#name = "multi_windows"
#path = "src/multi_windows.rs"

#[[bin]]
#name = "luminance"
#path = "src/luminance.rs"

[dependencies]
candelabre-core = { path = "../candelabre-core" }
candelabre-windowing = { path = "../candelabre-windowing" }
glutin = {version = "0.22.0", default-features = false}
luminance = "0.38.0"
rand = "0.5.5"
