[package]
name = "candelabre-examples"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"
homepage = ""
repository = ""
documentation = ""
readme = "README.md"

[[bin]]
name = "luminance"
path = "src/luminance.rs"

[[bin]]
name = "multi_windows"
path = "src/multi_windows.rs"

[[bin]]
name = "simple_window"
path = "src/simple_window.rs"

#[[bin]]
#name = "widget_demo"
#path = "src/widget_demo.rs"

[dependencies]
candelabre-windowing = { path = "../candelabre-windowing" }
gl = "0.14.0"
glutin = {version = "0.24.0", default-features = false}
#luminance = "0.39.0"
luminance-derive = "0.5.1"
nvg = "0.5.9"
nvg-gl = "0.5.4"
rand = "0.5.5"

[dependencies.luminance]
git = "https://github.com/othelarian/luminance-rs.git"
branch = "multiwin"
features = ["multi-contexts"]
