[package]
name = "candelabre-internal"
version = "0.1.0"
authors = ["othelarian <le.maitre.killian@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14.0"
#glutin = "0.22.0"
#luminance = "0.38.0"

#[dependencies.luminance]
#version = "0.38.0"
#git = "https://github.com/othelarian/luminance-rs.git"
#branch = "master"
